--- a/RM/src/app/app.component.html
+++ b/RM/src/app/app.component.html
@@ -3,7 +3,7 @@
     <span><img [attr.src]="server+world.logo" /> </span>
     <span id="worldname"> {{world.name}} </span>
   </div>
-  <div> <span id="worldname"> argent : {{world.argent}} </span> </div>
+  <div> <span id="worldname"> argent : {{world.money}} </span> </div>
   <div> multiplicateur </div>
   <div> ID du joueur </div>
 </div>
