progessbar, boutton quantite achat, quantite max achat, bigvalue

--- a/RM/src/app/app.component.css
+++ b/RM/src/app/app.component.css
@@ -296,3 +296,8 @@ grid-template-columns: 20% 80%; }
 .product {
     display: grid;
 grid-template-columns: 1fr 1fr; }
+.round {
+  width: 100px;
+  height: 100px;
+  border-radius: 50%
+}
