Images Objets et XML

--- a/RM/src/app/app.component.html
+++ b/RM/src/app/app.component.html
@@ -15,10 +15,29 @@
     <div>
       <app-product [prod]="world.products.product[0]" class="product col-md-6" (notifyProduction)="onProductionDone($event)" [qtmulti]="qtmulti" [money]="world.money"></app-product>
     </div>
-    <div> second produit </div>
-    <div> troisième produit </div>
-    <div> quatrième produit </div>
-    <div> cinquième produit </div>
-    <div> sixième produit </div>
+    <div>
+      <app-product [prod]="world.products.product[1]" class="product col-md-6" (notifyProduction)="onProductionDone($event)" [qtmulti]="qtmulti" [money]="world.money"></app-product>
+    </div>
+    <div>
+      <app-product [prod]="world.products.product[2]" class="product col-md-6" (notifyProduction)="onProductionDone($event)" [qtmulti]="qtmulti" [money]="world.money"></app-product>
+    </div>
+    <div>
+      <app-product [prod]="world.products.product[3]" class="product col-md-6" (notifyProduction)="onProductionDone($event)" [qtmulti]="qtmulti" [money]="world.money"></app-product>
+    </div>
+    <div>
+      <app-product [prod]="world.products.product[4]" class="product col-md-6" (notifyProduction)="onProductionDone($event)" [qtmulti]="qtmulti" [money]="world.money"></app-product>
+    </div>
+    <div>
+      <app-product [prod]="world.products.product[5]" class="product col-md-6" (notifyProduction)="onProductionDone($event)" [qtmulti]="qtmulti" [money]="world.money"></app-product>
+    </div>
+    <div>
+      <app-product [prod]="world.products.product[6]" class="product col-md-6" (notifyProduction)="onProductionDone($event)" [qtmulti]="qtmulti" [money]="world.money"></app-product>
+    </div>
+    <div>
+      <app-product [prod]="world.products.product[7]" class="product col-md-6" (notifyProduction)="onProductionDone($event)" [qtmulti]="qtmulti" [money]="world.money"></app-product>
+    </div>
+    <div>
+      <app-product [prod]="world.products.product[8]" class="product col-md-6" (notifyProduction)="onProductionDone($event)" [qtmulti]="qtmulti" [money]="world.money"></app-product>
+    </div>
   </div>
 </div>
