--- a/RM/src/app/product/product.component.html
+++ b/RM/src/app/product/product.component.html
@@ -5,9 +5,9 @@
 <mat-progress-bar class="progressbar" [value]="progressbarvalue"></mat-progress-bar>
 <p>{{_qtmulti}}</p>
 <div [ngSwitch]="_qtmulti">
-    <button *ngSwitchCase="'X1'" [hidden]="quantitemax < 1">x 1</button>
-    <button *ngSwitchCase="'X10'" [hidden]="quantitemax < 10">x 10</button>
-    <button *ngSwitchCase="'X100'"[hidden]="quantitemax < 100">x 100</button>
+    <button *ngSwitchCase="'X1'" [disabled]="quantitemax < 1">x 1</button>
+    <button *ngSwitchCase="'X10'" [disabled]="quantitemax < 10">x 10</button>
+    <button *ngSwitchCase="'X100'"[disabled]="quantitemax < 100">x 100</button>
     <button *ngSwitchCase="'XMAX'">x {{quantitemax}}</button>
 </div>
 <p>{{quantitemax}}</p>
