--- a/RM/src/app/product/product.component.html
+++ b/RM/src/app/product/product.component.html
@@ -1,4 +1,4 @@
-<p>Blaster</p>
+<p>{{product.name}}</p>
 <span>
     <img [attr.src]="server+product?.logo" class="round" (click)="startFabrication()" />
 </span>
