boucle for pour produits, money et score, switch case pour achat produit, qte départ
boucle for pour produits, money et score, switch case pour affciher les bouttons enfonction des quantité nécessaire,  quantité max ajuster si < 0, quantité de départ=0

--- a/RM/src/app/app.component.html
+++ b/RM/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div class="header">
   <div> logo monde
-    <span><img [attr.src]="server+world?.logo" class="round"/> </span>
+    <span><img [attr.src]="server+world?.logo" class="round" /> </span>
     <span id="worldname"> {{world?.name}} </span>
     <span [innerHTML]="world.money | bigvalue"> </span>
     <button (click)="cycle()">{{qtmulti}}</button>
@@ -10,34 +10,14 @@
   <div> ID du joueur </div>
 </div>
 <div class="main">
-  <div> liste des boutons de menu </div>
+  <div>
+    <p>liste des boutons de menu</p>
+    
+  </div>
   <div class="product">
-    <div>
-      <app-product [prod]="world.products.product[0]" class="product col-md-6" (notifyProduction)="onProductionDone($event)" [qtmulti]="qtmulti" [money]="world.money"></app-product>
-    </div>
-    <div>
-      <app-product [prod]="world.products.product[1]" class="product col-md-6" (notifyProduction)="onProductionDone($event)" [qtmulti]="qtmulti" [money]="world.money"></app-product>
-    </div>
-    <div>
-      <app-product [prod]="world.products.product[2]" class="product col-md-6" (notifyProduction)="onProductionDone($event)" [qtmulti]="qtmulti" [money]="world.money"></app-product>
-    </div>
-    <div>
-      <app-product [prod]="world.products.product[3]" class="product col-md-6" (notifyProduction)="onProductionDone($event)" [qtmulti]="qtmulti" [money]="world.money"></app-product>
-    </div>
-    <div>
-      <app-product [prod]="world.products.product[4]" class="product col-md-6" (notifyProduction)="onProductionDone($event)" [qtmulti]="qtmulti" [money]="world.money"></app-product>
-    </div>
-    <div>
-      <app-product [prod]="world.products.product[5]" class="product col-md-6" (notifyProduction)="onProductionDone($event)" [qtmulti]="qtmulti" [money]="world.money"></app-product>
-    </div>
-    <div>
-      <app-product [prod]="world.products.product[6]" class="product col-md-6" (notifyProduction)="onProductionDone($event)" [qtmulti]="qtmulti" [money]="world.money"></app-product>
-    </div>
-    <div>
-      <app-product [prod]="world.products.product[7]" class="product col-md-6" (notifyProduction)="onProductionDone($event)" [qtmulti]="qtmulti" [money]="world.money"></app-product>
-    </div>
-    <div>
-      <app-product [prod]="world.products.product[8]" class="product col-md-6" (notifyProduction)="onProductionDone($event)" [qtmulti]="qtmulti" [money]="world.money"></app-product>
+    <div *ngFor="let product of world.products.product">
+      <app-product [prod]="product" class="product col-md-6"
+        (notifyProduction)="onProductionDone($event)" [qtmulti]="qtmulti" [money]="world.money"></app-product>
     </div>
   </div>
 </div>
