--- a/RM/src/app/product/product.component.css
+++ b/RM/src/app/product/product.component.css
@@ -1,9 +1,25 @@
 .round {
     width: 100px;
     height: 100px;
-    border-radius: 50%
+    border-radius: 50%;
   }
 .progressbar{
   height: 30px;
+  width: 100px;
+  margin: 5px 5px 5px 5px;
 }
-  
+.imagebar{
+  margin-left: auto;
+  margin-right: auto;
+  position: relative;
+}
+.lesecond {
+  position: absolute;
+  left:-5px;
+  bottom: -50px;
+ }
+ .letroisieme {
+  position: absolute;
+  left:50px;
+  bottom: -20px;
+ }
