--- a/RM/src/app/product/product.component.html
+++ b/RM/src/app/product/product.component.html
@@ -1,10 +1,18 @@
-<p>{{product.name}}</p>
-<span>
-    <img [attr.src]="server+product?.logo" class="round" (click)="startFabrication()" />
-    <p>quantité: {{product.quantite}}</p>
-</span>
-<mat-progress-bar class="progressbar" [value]="progressbarvalue"></mat-progress-bar>
-<p>{{_qtmulti}}</p>
+<div class="imagebar">
+    <div class="lepremier">
+        <p>{{product.name}}</p>
+        <span>
+            <img [attr.src]="server+product?.logo" class="round" (click)="startFabrication()" />
+        </span>
+    </div>
+    <div class="lesecond">
+        <mat-progress-bar class="progressbar" [value]="progressbarvalue"></mat-progress-bar>
+        <p>{{_qtmulti}}</p>
+    </div>
+    <div class="letroisieme">
+        <p>{{product.quantite}}</p>
+    </div>
+</div>
 <div [ngSwitch]="_qtmulti">
     <button *ngSwitchCase="'X1'" [disabled]="quantitemax < 1" (click)="achat()">x 1</button>
     <button *ngSwitchCase="'X10'" [disabled]="quantitemax < 10" (click)="achat()">x 10</button>
