--- a/RM/src/app/product/product.component.html
+++ b/RM/src/app/product/product.component.html
@@ -1,22 +1,25 @@
 <div class="imagebar">
     <div class="lepremier">
-        <p>{{product.name}}</p>
         <span>
             <img [attr.src]="server+product?.logo" class="round" (click)="startFabrication()" />
         </span>
     </div>
     <div class="lesecond">
         <mat-progress-bar class="progressbar" [value]="progressbarvalue"></mat-progress-bar>
-        <p>{{_qtmulti}}</p>
+
     </div>
     <div class="letroisieme">
         <p>{{product.quantite}}</p>
     </div>
+    <div class="textedroite">
+        <p>{{product.name}}</p>
+        <div [ngSwitch]="_qtmulti">
+            <button *ngSwitchCase="'X1'" [disabled]="quantitemax < 1" (click)="achat()">x 1</button>
+            <button *ngSwitchCase="'X10'" [disabled]="quantitemax < 10" (click)="achat()">x 10</button>
+            <button *ngSwitchCase="'X100'"[disabled]="quantitemax < 100" (click)="achat()">x 100</button>
+            <button *ngSwitchCase="'XMAX'" [disabled]="quantitemax <= 0" (click)="achat()">x {{quantitemax}}</button>
+        </div>
+        <p>{{quantitemax}}</p>
+    </div>
 </div>
-<div [ngSwitch]="_qtmulti">
-    <button *ngSwitchCase="'X1'" [disabled]="quantitemax < 1" (click)="achat()">x 1</button>
-    <button *ngSwitchCase="'X10'" [disabled]="quantitemax < 10" (click)="achat()">x 10</button>
-    <button *ngSwitchCase="'X100'"[disabled]="quantitemax < 100" (click)="achat()">x 100</button>
-    <button *ngSwitchCase="'XMAX'" [disabled]="quantitemax <= 0" (click)="achat()">x {{quantitemax}}</button>
-</div>
-<p>{{quantitemax}}</p>
+
