--- a/RM/src/styles.css
+++ b/RM/src/styles.css
@@ -1,6 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
 
-html, body { height: 100%; }
+html, body { height: 100%;
+background-color: rgb(122, 202, 1);
+background-size: cover;
+background-repeat: no-repeat; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
 mat-progress-bar .mat-progress-bar-buffer {
