--- a/RM/src/app/app.component.html
+++ b/RM/src/app/app.component.html
@@ -12,12 +12,36 @@
     <br>
     <span id="worldname"> {{world?.name}} </span>
     <p>liste des boutons de menu</p>
-
+    <button (click)="showManagers = !showManagers">Managers</button>
   </div>
   <div class="product">
     <div *ngFor="let product of world.products.product">
-      <app-product [prod]="product" class="product col-md-6" (notifyProduction)="onProductionDone($event)" (notifyPurchase)="onPurchaseDone($event)"
-        [qtmulti]="qtmulti" [money]="world.money"></app-product>
+      <app-product [prod]="product" class="product col-md-6" (notifyProduction)="onProductionDone($event)"
+        (notifyPurchase)="onPurchaseDone($event)" [qtmulti]="qtmulti" [money]="world.money"></app-product>
     </div>
   </div>
 </div>
+<div *ngIf="showManagers" class="modal">
+  <div>
+    <h1 class="title">Managers make you feel better !</h1>
+  </div>
+  <div>
+    <div *ngFor="let manager of world.managers.pallier">
+      <div *ngIf="!manager.unlocked" class="managerslayout">
+        <div>
+          <div class="logo"><img class="round" [attr.src]="server+manager.logo" /> </div>
+        </div>
+        <div>
+          <div class="managername"> {{ manager.name}} </div>
+          <div class="managercible"> {{ world.products.product[manager.idcible-1].name}}
+            <div class="managercost"> {{ manager.seuil}} </div>
+          </div>
+          <div>
+            <div class="hirebutton" (click)="hireManager(manager)"
+              [ngClass]="{'selectable' : (world.money >= manager.seuil)}">Hire !</div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <button class="closebutton" mat-raised- button color="primary" (click)="showManagers = !showManagers">Close</button>
+  </div>
