--- a/RM/src/app/app.component.css
+++ b/RM/src/app/app.component.css
@@ -288,8 +288,12 @@
     }
   }
 .header {
-    display: grid;
-grid-template-columns: 25% 25% 30% 20%; }
+  padding: 5px;
+  display: grid;
+  grid-template-columns: 25% 25% 30% 20%; 
+  font:1.8em 'get_schwiftyregular' ;
+  color: #02cee9;
+  text-shadow: -0.5px 0 black, 0 0.5px black, 0.5px 0 black, 0 -0.5px black;}
 .main {
     display: grid;
     grid-template-columns: 20% 80%; 
@@ -298,6 +302,15 @@ grid-template-columns: 25% 25% 30% 20%; }
   display: grid;
   grid-template-columns: 1fr 1fr;
   padding: 0px 0px 25px 0px; }
+
+.produit{
+  height: 100px;
+  width: 450px;
+  padding-top: 2.5px;
+  margin: 0px 100px 10px 0px;
+  border: 1px solid black;
+  background-color: #ea50ac;
+}
 .round {
   width: 100px;
   height: 100px;
@@ -325,8 +338,6 @@ grid-template-columns: 25% 25% 30% 20%; }
 
 .left{
   text-align: center;
-
-  background-color: #6c9337;
 }
 
 .hirebutton{
