--- a/RM/src/app/product/product.component.html
+++ b/RM/src/app/product/product.component.html
@@ -6,7 +6,6 @@
     </div>
     <div class="lesecond">
         <mat-progress-bar class="progressbar" [value]="progressbarvalue"></mat-progress-bar>
-
     </div>
     <div class="letroisieme">
         <p>{{product.quantite}}</p>
@@ -14,10 +13,10 @@
     <div class="textedroite">
         <p>{{product.name}}</p>
         <div [ngSwitch]="_qtmulti">
-            <button *ngSwitchCase="'X1'" [disabled]="quantitemax < 1" (click)="achat()">x 1</button>
-            <button *ngSwitchCase="'X10'" [disabled]="quantitemax < 10" (click)="achat()">x 10</button>
-            <button *ngSwitchCase="'X100'"[disabled]="quantitemax < 100" (click)="achat()">x 100</button>
-            <button *ngSwitchCase="'XMAX'" [disabled]="quantitemax <= 0" (click)="achat()">x {{quantitemax}}</button>
+            <button  class="bouton" *ngSwitchCase="'X1'" [disabled]="quantitemax < 1" (click)="achat()">x 1</button>
+            <button  class="bouton" *ngSwitchCase="'X10'" [disabled]="quantitemax < 10" (click)="achat()">x 10</button>
+            <button  class="bouton" *ngSwitchCase="'X100'"[disabled]="quantitemax < 100" (click)="achat()">x 100</button>
+            <button  class="bouton" *ngSwitchCase="'XMAX'" [disabled]="quantitemax <= 0" (click)="achat()">x {{quantitemax}}</button>
         </div>
         <p>{{quantitemax}}</p>
     </div>
