--- a/RM/src/app/product/product.component.html
+++ b/RM/src/app/product/product.component.html
@@ -13,10 +13,10 @@
     <div class="textedroite">
         <p>{{product.name}}</p>
         <div [ngSwitch]="_qtmulti">
-            <button  class="bouton" *ngSwitchCase="'X1'" [disabled]="quantitemax < 1" (click)="achat()">Acheter 1</button>
-            <button  class="bouton" *ngSwitchCase="'X10'" [disabled]="quantitemax < 10" (click)="achat()">Acheter 10</button>
-            <button  class="bouton" *ngSwitchCase="'X100'"[disabled]="quantitemax < 100" (click)="achat()">Acheter 100</button>
-            <button  class="bouton" *ngSwitchCase="'XMAX'" [disabled]="quantitemax <= 0" (click)="achat()">Acheter {{quantitemax}}</button>
+            <button  [className]="quantitemax >= 1 ? 'bouton' : 'boutonD'" *ngSwitchCase="'X1'" [disabled]="quantitemax < 1" (click)="achat()">Acheter 1</button>
+            <button  [className]="quantitemax >= 10 ? 'bouton' : 'boutonD'" *ngSwitchCase="'X10'" [disabled]="quantitemax < 10" (click)="achat()">Acheter 10</button>
+            <button  [className]="quantitemax >= 100 ? 'bouton' : 'boutonD'" *ngSwitchCase="'X100'" [disabled]="quantitemax < 100" (click)="achat()">Acheter 100</button>
+            <button  [className]="quantitemax != 0 ? 'bouton' : 'boutonD'" *ngSwitchCase="'XMAX'" [disabled]="quantitemax <= 0" (click)="achat()">Acheter {{quantitemax}}</button>
         <p>{{product.cout|number:"1.0-0"}}</p>
         </div>
     </div>
