--- a/RM/src/app/product/product.component.html
+++ b/RM/src/app/product/product.component.html
@@ -17,7 +17,9 @@
             <button  [className]="quantitemax >= 10 ? 'bouton' : 'boutonD'" *ngSwitchCase="'X10'" [disabled]="quantitemax < 10" (click)="achat()">Acheter 10</button>
             <button  [className]="quantitemax >= 100 ? 'bouton' : 'boutonD'" *ngSwitchCase="'X100'" [disabled]="quantitemax < 100" (click)="achat()">Acheter 100</button>
             <button  [className]="quantitemax != 0 ? 'bouton' : 'boutonD'" *ngSwitchCase="'XMAX'" [disabled]="quantitemax <= 0" (click)="achat()">Acheter {{quantitemax}}</button>
-        <p>{{product.cout|number:"1.2-2"}}</p>
+        <p>{{this.prix|number:"1.2-2"}}<img
+            style="height: 30px; position: relative; bottom:-5px;padding-left: 4px;" class="picklerick"
+            src="http://localhost:8080/icones/picklerick.png" alt="Pickle Rick"></p>
         </div>
     </div>
 </div>
